2008-04-07  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.19 TAGGED FOR RELEASE ***

	* generic/tkWindow.c (Initialize): fix double-free on Tk_ParseArgv
	* tests/main.test (main-3.*):      error. [Bug 1937135]

2008-04-07  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.19
	* generic/tk.h:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

	* changes:		updates for 8.4.19 release.

2008-03-27  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.1x): fix 64bit support for Sun cc. [Bug 1921166]

	* unix/configure: autoconf-2.13

2008-02-27  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDraw.c: workaround leak in Carbon SetPortPenPixPat()
	API [Bug 1863346]; avoid repeated PixPat allocation/deallocation.

2008-02-06  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.18 TAGGED FOR RELEASE ***

	* README:		Bump version number to 8.4.18
	* generic/tk.h:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

	* changes:		updates for 8.4.18 release.

2008-02-02  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish-Info.plist.in:	add CFBundleLocalizations key, listing
	* unix/configure.in (Darwin): 	all library/msgs locales.

	* unix/configure.in (Darwin):	correct Info.plist year substitution in
					non-framework builds.

	* unix/configure:		autoconf-2.13

2008-02-01  Reinhard Max  <max@suse.de>

	* generic/tkImgGIF.c: Fixed a buffer overflow (CVE-2008-0553).
	* tests/imgPhoto.test: Added a test for the above.

2007-12-31  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.17 TAGGED FOR RELEASE ***

	* changes:		updates for 8.4.17 release.
	* unix/configure.in:	Add "hu" to LOCALES.
	* unix/configure:	autoconf-2.13

2007-12-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (ApplyMasterOverrideChanges): Revert 2007-10-26